# ForceManII

./: .gitignore  .travis.yml  Angle_8hpp.html  Angle_8hpp__incl.map  Angle_8hpp__incl.md5  BFSIterator_8hpp_source.html  CMakeLists.txt  CONTRIBUTING.md  Common_8hpp.html  Common_8hpp__incl.md5  Common_8hpp_source.html  Distance_8hpp.html  Distance_8hpp__incl.map  Distance_8hpp__incl.md5  Distance_8hpp_source.html  Doxyfile  Electrostatics_8hpp.html  Electrostatics_8hpp__incl.map  Electrostatics_8hpp__incl.md5  Electrostatics_8hpp_source.html  Enum_8hpp_source.html  FFTerm.hpp  FFTerm_8hpp.html  FFTerm_8hpp_source.html  FManIIDefs_8hpp.html  FManIIDefs_8hpp__dep__incl.map  FManIIDefs_8hpp__dep__incl.md5  FManIIDefs_8hpp__incl.map  FManIIDefs_8hpp__incl.md5  FManIIDefs_8hpp_source.html  FManII_8hpp.html  FManII_8hpp__incl.map  FManII_8hpp__incl.md5  FManII_8hpp_source.html  ForceField_8hpp.html  ForceField_8hpp__dep__incl.map  ForceField_8hpp__dep__incl.md5  ForceField_8hpp__incl.map  ForceField_8hpp__incl.md5  ForceField_8hpp_source.html  (+199 more)
ForceFields/: amber99.hpp
ForceManII/: Angle.cpp  Angle.hpp  BFSIterator.hpp  CMakeLists.txt  Common.hpp  Distance.cpp  Distance.hpp  Electrostatics.cpp  Electrostatics.hpp  Enum.hpp  FFTerm.cpp  FFTerm.hpp  FManII.cpp  FManII.hpp  FManIIDefs.hpp  ForceField.cpp  ForceField.hpp  FourierSeries.cpp  FourierSeries.hpp  HarmonicOscillator.cpp  HarmonicOscillator.hpp  InternalCoordinates.hpp  LennardJones.cpp  LennardJones.hpp  ModelPotential.cpp  ModelPotential.hpp  ParameterPack.hpp  ParameterSet.cpp  ParameterSet.hpp  ParseFile.cpp  Torsion.cpp  Torsion.hpp  Util.hpp  fmaniiConfig.cmake.in  polynomial.cpp
ForceManII/ForceFields/: CMakeLists.txt  amber99.cpp  charmm22.cpp  oplsaa.cpp
ForceManII/InternalCoords/: Angle.cpp  Angle.hpp  CMakeLists.txt  Distance.cpp  Distance.hpp  ImproperTorsion.cpp  ImproperTorsion.hpp  Torsion.cpp  Torsion.hpp
ForceManII/ModelPotentials/: CMakeLists.txt  Electrostatics.cpp  Electrostatics.hpp  FourierSeries.cpp  FourierSeries.hpp  HarmonicOscillator.cpp  HarmonicOscillator.hpp  LennardJones.cpp  LennardJones.hpp
Interfaces/: CMakeLists.txt  FManIIPulsarAPI.cpp  FManIIPulsarAPI.hpp  __init__.py  creator.cpp  modinfo.py
docs/html/: Angle_8hpp.html  Angle_8hpp__incl.map  Angle_8hpp__incl.md5  Angle_8hpp_source.html  Distance_8hpp.html  Distance_8hpp__incl.map  Distance_8hpp__incl.md5  FManII_8hpp.html  FManII_8hpp__dep__incl.map  FManII_8hpp__dep__incl.md5  FManII_8hpp__incl.map  FManII_8hpp__incl.md5  FManII_8hpp_source.html  FourierSeries_8hpp.html  FourierSeries_8hpp_source.html  HO.html  HarmonicOscillator_8hpp.html  HarmonicOscillator_8hpp__incl.md5  HarmonicOscillator_8hpp_source.html  InternalCoordinates_8hpp_source.html  Torsion_8hpp.html  Torsion_8hpp__incl.map  Torsion_8hpp__incl.md5  Torsion_8hpp_source.html  Util_8hpp__incl.map  Util_8hpp__incl.md5  Util_8hpp_source.html  angle.html  annotated.html  classFManII_1_1Angle-members.html  classFManII_1_1Angle.html  classFManII_1_1Angle__coll__graph.md5  classFManII_1_1Angle__inherit__graph.map  classFManII_1_1Distance.html  classFManII_1_1Distance__coll__graph.map  classFManII_1_1FFTerm.html  classFManII_1_1IntCoords-members.html  classFManII_1_1IntCoords.html  classFManII_1_1IntCoords__coll__graph.md5  classFManII_1_1IntCoords__inherit__graph.map  (+34 more)
docs/html/search/: all_0.js  all_1.js  (+37 more)
docs/latex/: Angle_8hpp.tex  Angle_8hpp__incl.md5  Common_8hpp.tex  Common_8hpp__incl.md5  Distance_8hpp.tex  Distance_8hpp__incl.md5  FFTerm_8hpp.tex  FManII_8hpp.tex  FManII_8hpp__dep__incl.md5  FManII_8hpp__incl.md5  FourierSeries_8hpp.tex  FourierSeries_8hpp__incl.md5  HO.tex  HarmonicOscillator_8hpp.tex  HarmonicOscillator_8hpp__incl.md5  Torsion_8hpp.tex  Torsion_8hpp__incl.md5  Util_8hpp.tex  Util_8hpp__incl.md5  angle.tex  annotated.tex  classFManII_1_1Angle.tex  classFManII_1_1Angle__coll__graph.md5  classFManII_1_1Angle__inherit__graph.md5  classFManII_1_1Distance.tex  classFManII_1_1Distance__coll__graph.md5  classFManII_1_1Distance__inherit__graph.md5  classFManII_1_1FFTerm.tex  classFManII_1_1IntCoords.tex  classFManII_1_1IntCoords__coll__graph.md5  classFManII_1_1IntCoords__inherit__graph.md5  classFManII_1_1Torsion.tex  classFManII_1_1Torsion__coll__graph.md5  classFManII_1_1Torsion__inherit__graph.md5  dir_9f9f8a67457e8174ad35efa3d727cc3f.tex  distance.tex  files.tex  fourier.tex  hierarchy.tex  index.tex  (+10 more)
dox/: FileLayout.md  ForceField.md  LJ.md  LibraryFlow.md  angle.md  distance.md  dox.doxcfg  electrostatics.md  ffterm.md  fourierseries.md  harmonicoscillator.md  history.md  mainpage.dox  polynomial.md  quickstart.md  terminology.md  tinkerformat.md  torsion.md
nbproject/: configurations.xml  project.properties  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_63.js  all_64.js  all_67.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_73.js  all_74.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_66.js  classes_68.js  classes_69.js  classes_70.js  (+79 more)
tests/: CMakeLists.txt  TestAMBER99.cpp  TestAngle.cpp  TestAssignParams.cpp  TestBond.cpp  TestCHARMM22.cpp  TestCoulomb.cpp  TestDeriv.cpp  TestDistance.cpp  TestFourierSeries.cpp  TestHO.cpp  TestImp.cpp  TestIntCoords.cpp  TestLJ.cpp  TestMacros.hpp  TestOPLSAA.cpp  TestParse.cpp  TestPulsarAPI.py  TestTorsion.cpp  deltorphin.cpp  deltorphin.hpp  ubiquitin.hpp  ubiquitin_intcoords.hpp  ubiquitin_params.hpp
tests/Interfaces/: CMakeLists.txt  TestPulsarAPI.py
tests/testdata/: crambin.cpp  crambin.hpp  crambin_deriv.cpp  crambin_deriv.hpp  crambin_intcoords.cpp  crambin_intcoords.hpp  peptide.cpp  peptide.hpp  peptide_deriv.cpp  peptide_deriv.hpp  peptide_intcoords.cpp  peptide_intcoords.hpp  ubiquitin.cpp  ubiquitin.hpp  ubiquitin_deriv.cpp  ubiquitin_deriv.hpp  ubiquitin_intcoords.hpp
